Updated Omada Beta to 5.14.32.2 - completely merged install.sh and entrypoint.sh - factored out Home Assistant specific changes to begin/end of the files for easier maintainance - only persist data and logs - wrote maintainance manual